MDEV-24538: JSON_LENGTH does not return error upon wrong number of parameters